# libdeviceid

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/deviceid/: id.h
include/deviceid/machine/: machine_id_unix.h  machine_id_win.h
src/: main.cpp
